# opgl_learning

./: CMakeLists.txt  README.md
common/: glComp.h  glfwWindow.cpp  glfwWindow.hpp  shaders.cpp  shaders.h
src/01_first_window/: 01_first_window.cpp  fragShader.fragshader  vertShader.vertshader
src/GL_learn_01_first_window/: 01_first_window.cpp
